# CourseWork

COMP6464_ASS2/: CMakeLists.txt  README.md  auto_test.py  batch_test.sh  cloth.py  cloth_code.cpp  cloth_code.h  cloth_omp.cpp  cloth_opt.cpp  cloth_param.h  cloth_sse.cpp  cloth_vect_omp.cpp  kernel_main.cpp  opengl_main.cpp  visualization.py
COMP6490_FINAL/: main.py
COMP6528_Assignment/Assignment-python/: Q2.py  Q3_1.py  Q3_2.py  Q3_3.py  contour_demo.py  helper_function.py
COMP6528_CLAB1/: task1.py  task5.py
COMP6528_CLAB1/CLab-1-Report-U7546753/code/: task2.py  task3.py  task4.py
COMP6528_CLAB2/: Clab-2-Template.docx
COMP6528_CLAB2/Task1-2023/: HarrisCorner.py  harris.py
COMP6528_CLAB2/Task1-2023/__MACOSX/: ._Task1-2023
COMP6528_CLAB2/Task1-2023/__MACOSX/Task1-2023/: ._HarrisCorner.py  ._harris.m
COMP6528_CLAB2/Task2-2023/: helper_functions.py  main.py  main_my_model.py
COMP6528_CLAB3/: Clab3_template.docx  calibrate.py  vgg_KR_from_P.py
COMP8350_Final/: bass.js  connect.py  gibber.txt  main.py  websocket gibber.js
COMP8600_ASS1/: classification_with_rejection.py  classification_with_rejection_j.py  display.ipynb  exponential_family.py  exponential_family_j.py  requirements.txt
COMP8600_ASS1/framework/: exp_fam_model.py  mnist_setting.py
COMP8600_ASS2/: requirements.txt
COMP8600_ASS2/boframework/: acquisitions.py  bayesopt.py  bayesopt_implementation_viewer.ipynb  gp.py  kernels.py
COMP8600_ASS2/kernelsframework/: graph_kernels.py  image_kernels.py  kernel_definitions.py
